--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "serverless-http": "^2.6.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "axios": "^0.21.1"
   },
   "scripts": {
     "start": "react-scripts start",
