--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-scripts": "4.0.1",
     "serverless-http": "^2.6.0",
     "web-vitals": "^0.2.4",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
