--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "web-vitals": "^0.2.4",
     "axios": "^0.21.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1"
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32"
   },
   "scripts": {
     "start": "react-scripts start",
